Initial HTML & CSS

--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -1,3 +1,9 @@
-@import "./variables";
-@import "./helpers";
-@import "./base";
+@import "./_variables";
+@import "./_reset";
+@import "./_helpers";
+@import "./_fonts";
+@import "./_header";
+@import "./_about";
+@import "./_carousel";
+@import "./_pricing";
+@import "./_misc";
