--- a/src/sass/all.scss
+++ b/src/sass/all.scss
@@ -1,7 +1,7 @@
 @import "./_variables";
 @import "./_reset";
 @import "./_helpers";
-@import "./_fonts";
+@import "./_fontello";
 @import "./_header";
 @import "./_about";
 @import "./_carousel";
