--- a/src/sass/_header.scss
+++ b/src/sass/_header.scss
@@ -1,19 +1,29 @@
-
 .header {
     color: $white;
-
     &::after {
         @include triangle-bottom;
     }
+    &::before {
+        content: '';
+        width: 750px;
+        position: absolute;
+        top: 0;
+        right: -70px;
+        bottom: 0;
+        pointer-events: none;
+        display: block;
+        background: url('../img/header_bg.svg') right 20% no-repeat;
+    }
 }
 
-.header__log {
+.header__logo {
     margin: 0;
 }
 
-.header_content {
-    min-height: 890px;
+.header__content {
+    min-height: 900px;
     padding-top: $header-padding-top;
+    position: relative;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -26,9 +36,16 @@
 }
 
 .header__nav {
+    position: absolute;
+    left: $gutter;
+    right: $gutter;
     display: flex;
     justify-content: space-between; 
     align-items: center; 
+}
+
+.header__text {
+    margin-bottom: 50px;
 }
 
 .header__text,
@@ -37,8 +54,33 @@
     opacity: $text-opacity;
 }
 
+.header__link,
 .header__search {
+    transition: all 0.3s;
+
+    &:hover {
+        opacity: 1;
+        color: $focus;
+    }
+}
+
+.header__link {
+    margin-left: 25px;
+}
+
+.header__search {
+    color: $white;
     &:hover {
         cursor: pointer;
     }
+}
+
+.header__divider {
+    display: inline-block;
+    vertical-align: middle;
+    margin-left: $gutter;
+    height: 12px;
+    width: 1px;
+    background-color: $white;
+    opacity: 0.2;
 }
