--- a/src/css/style.css
+++ b/src/css/style.css
@@ -30,7 +30,8 @@ button {
   border: none; }
 
 img {
-  vertical-align: top; }
+  vertical-align: top;
+  max-width: 100%; }
 
 .container {
   width: 100%;
@@ -88,7 +89,8 @@ img {
       border-color: #f5a12d;
       color: #f5a12d; }
   .btn.btn--stroke-gray {
-    border-color: #e6e6e8; }
+    border-color: #e6e6e8;
+    background-color: #ffffff; }
   .btn + .btn {
     margin-left: 15px; }
 
@@ -187,27 +189,31 @@ img {
 .header {
   color: #ffffff; }
   .header::after {
-    bottom: 0;
-    content: '';
-    display: block;
-    left: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    position: absolute;
-    border-style: solid;
-    border-width: 0 0 290px 100vw;
-    border-color: transparent transparent #ffffff transparent; }
-  .header::before {
-    content: '';
-    width: 750px;
-    position: absolute;
-    top: 0;
-    right: -70px;
-    bottom: 0;
-    pointer-events: none;
-    display: block;
-    background: url("../img/header_bg.svg") right 20% no-repeat; }
+    bottom: 0; }
+    @media (max-width: 757px) {
+      .header::after {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 0 120px 100vw;
+        border-color: transparent transparent #ffffff transparent; } }
+    @media (min-width: 758px) {
+      .header::after {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 0 290px 100vw;
+        border-color: transparent transparent #ffffff transparent; } }
 
 .header__logo {
   margin: 0; }
@@ -281,10 +287,24 @@ img {
   background-color: #ffffff;
   opacity: 0.2; }
 
+@media (min-width: 1200px) {
+  .header::before {
+    content: '';
+    width: 750px;
+    position: absolute;
+    top: 0;
+    right: -70px;
+    bottom: 0;
+    pointer-events: none;
+    display: block;
+    background: url("../img/header_bg.svg") right 20% no-repeat; } }
+
 .about__row {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
       -ms-flex-pack: justify;
           justify-content: space-between;
@@ -292,8 +312,6 @@ img {
   padding-left: 15px;
   padding-right: 15px;
   margin: 20px auto 120px; }
-  .about__row + .about__row {
-    margin-top: 350px; }
   .about__row.about__row--center {
     -webkit-box-align: center;
         -ms-flex-align: center;
@@ -303,12 +321,18 @@ img {
         -ms-flex-align: start;
             align-items: flex-start; }
 
+.about {
+  padding-top: 20px; }
+
 .about__col {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  max-width: 375px;
   position: relative; }
+  .about__col.about__col--txt {
+    margin-bottom: 20px; }
+  .about__col.about__col--img {
+    margin: 0 auto;
+    max-width: 200px; }
+  .about__col.about__col--left {
+    padding-top: 100px; }
 
 .about__img {
   position: absolute; }
@@ -319,18 +343,18 @@ img {
   right: -80px; }
 
 .about__img--error {
-  top: 100px; }
+  bottom: 130px; }
 
 .about__img--selectors {
-  top: 190px; }
+  bottom: -60px; }
 
 .about__img--ranges {
-  top: -105px;
-  left: -100px; }
+  left: -100px;
+  bottom: 110px; }
 
 .about__img--success {
   right: -30px;
-  bottom: -75px; }
+  bottom: -55px; }
 
 .about__img--triangle,
 .about__img--polygon-blue,
@@ -356,37 +380,97 @@ img {
   color: #3b9feb;
   font-size: 60px;
   left: 50%;
-  top: -145px;
+  bottom: 200px;
   margin-left: -30px;
   -webkit-transform: rotate(-45deg);
           transform: rotate(-45deg); }
 
+@media (min-width: 758px) {
+  .about {
+    padding-top: 0; }
+  .about__row + .about__row {
+    margin-top: 350px; }
+  .about__col {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1; }
+    .about__col.about__col--left {
+      padding-top: 0;
+      -webkit-box-ordinal-group: 2;
+          -ms-flex-order: 1;
+              order: 1; }
+    .about__col.about__col--right {
+      -webkit-box-ordinal-group: 3;
+          -ms-flex-order: 2;
+              order: 2; }
+    .about__col.about__col--img, .about__col.about__col--txt {
+      max-width: 375px;
+      margin: 0; }
+  .about__img--error {
+    bottom: 180px; }
+  .about__img--selectors {
+    bottom: -45px; }
+  .about__img--ranges {
+    bottom: 220px; }
+  .about__img--triangle {
+    bottom: 370px; }
+  .about__img--success {
+    bottom: -75px; } }
+
 .carousel {
-  padding: 290px 0; }
+  padding: 120px 0; }
   .carousel::before {
-    bottom: 0;
-    content: '';
-    display: block;
-    left: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    position: absolute;
-    border-style: solid;
-    border-width: 0 0 290px 100vw;
-    border-color: transparent transparent #ffffff transparent; }
+    bottom: 0; }
+    @media (max-width: 757px) {
+      .carousel::before {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 0 120px 100vw;
+        border-color: transparent transparent #ffffff transparent; } }
+    @media (min-width: 758px) {
+      .carousel::before {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 0 290px 100vw;
+        border-color: transparent transparent #ffffff transparent; } }
   .carousel::after {
-    top: 0;
-    content: '';
-    display: block;
-    left: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    position: absolute;
-    border-style: solid;
-    border-width: 290px 100vw 0 0;
-    border-color: #ffffff transparent transparent transparent; }
+    top: 0; }
+    @media (max-width: 757px) {
+      .carousel::after {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 120px 100vw 0 0;
+        border-color: #ffffff transparent transparent transparent; } }
+    @media (min-width: 758px) {
+      .carousel::after {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 290px 100vw 0 0;
+        border-color: #ffffff transparent transparent transparent; } }
 
 .slider {
   overflow: hidden; }
@@ -406,10 +490,11 @@ img {
   white-space: normal;
   display: inline-block;
   vertical-align: bottom;
+  max-width: 60%;
   width: 335px;
-  margin-left: 30px;
-  margin-right: 30px;
-  padding: 35px 60px;
+  margin-left: 15px;
+  margin-right: 15px;
+  padding: 35px 40px;
   background-color: #ffffff;
   cursor: pointer; }
   .slider__slide:nth-child(even) {
@@ -418,11 +503,11 @@ img {
     position: absolute; }
   .slider__slide::after {
     color: #ffffff;
-    width: 30px;
+    width: 20px;
     text-align: center;
-    font-size: 25px;
-    left: -13px;
-    top: 58px; }
+    font-size: 20px;
+    left: -8px;
+    top: 38px; }
   .slider__slide::before {
     content: "";
     font-family: "fontello";
@@ -434,12 +519,12 @@ img {
     text-align: center;
     font-variant: normal;
     text-transform: none;
-    font-size: 70px;
+    font-size: 40px;
     color: #4121dc;
     -webkit-transform: rotate(-7deg);
             transform: rotate(-7deg);
     top: 22px;
-    left: -35px; }
+    left: -20px; }
   .slider__slide.slider__slide--note::after {
     content: "";
     font-family: "fontello";
@@ -501,28 +586,61 @@ img {
   .slider__indicator.slider__indicator--active {
     background-color: #ffffff; }
 
+@media (min-width: 758px) {
+  .slider__slide {
+    margin-left: 30px;
+    margin-right: 30px;
+    padding: 35px 60px;
+    max-width: 100%; }
+    .slider__slide::after {
+      width: 30px;
+      font-size: 25px;
+      left: -13px;
+      top: 58px; }
+    .slider__slide::before {
+      font-size: 70px;
+      left: -35px; }
+  .carousel {
+    padding: 290px 0; } }
+
 .pricing {
   background-image: -webkit-gradient(linear, left top, left bottom, from(#ffffff), to(#f4f7fe));
   background-image: linear-gradient(to bottom, #ffffff, #f4f7fe);
-  padding-bottom: 360px; }
+  padding-bottom: 190px; }
   .pricing::after {
-    bottom: 0;
-    content: '';
-    display: block;
-    left: 0;
-    right: 0;
-    width: 0;
-    height: 0;
-    position: absolute;
-    border-style: solid;
-    border-width: 0 0 290px 100vw;
-    border-color: transparent transparent #ffffff transparent; }
+    bottom: 0; }
+    @media (max-width: 757px) {
+      .pricing::after {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 0 120px 100vw;
+        border-color: transparent transparent #ffffff transparent; } }
+    @media (min-width: 758px) {
+      .pricing::after {
+        content: '';
+        display: block;
+        left: 0;
+        right: 0;
+        width: 0;
+        height: 0;
+        position: absolute;
+        border-style: solid;
+        border-width: 0 0 290px 100vw;
+        border-color: transparent transparent #ffffff transparent; } }
 
 .prices {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
-  margin-bottom: 150px;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  margin-bottom: 50px;
   position: relative; }
   .prices::before, .prices::after {
     position: absolute;
@@ -565,13 +683,9 @@ img {
             transform: rotate(-8deg); }
 
 .prices__box {
-  -webkit-box-flex: 1;
-      -ms-flex: 1;
-          flex: 1;
-  min-width: 25%;
+  width: 285px;
+  margin: 0 auto 35px;
   z-index: 1; }
-  .prices__box.prices__box--special {
-    padding-left: 30px; }
   .prices__box:hover {
     z-index: 2; }
     .prices__box:hover .prices__card {
@@ -639,8 +753,6 @@ img {
     font-size: 1.875rem; }
 
 .checkmark-list.checkmark-list--col-3 {
-  -webkit-column-count: 3;
-          column-count: 3;
   -webkit-column-gap: 50px;
           column-gap: 50px; }
 
@@ -672,6 +784,30 @@ img {
     left: 0;
     top: -2px; }
 
+@media (min-width: 758px) and (max-width: 1199px) {
+  .checkmark-list.checkmark-list--col-3 {
+    -webkit-column-count: 2;
+            column-count: 2; } }
+
+@media (min-width: 758px) {
+  .pricing {
+    padding-bottom: 360px; } }
+
+@media (min-width: 1200px) {
+  .checkmark-list.checkmark-list--col-3 {
+    -webkit-column-count: 3;
+            column-count: 3; }
+  .prices {
+    margin-bottom: 150px; }
+  .prices__box {
+    -webkit-box-flex: 1;
+        -ms-flex: 1;
+            flex: 1;
+    width: 25%;
+    margin: 0; }
+    .prices__box.prices__box--special {
+      padding-left: 30px; } }
+
 .misc {
   text-align: center;
   padding-top: 100px;
@@ -688,7 +824,7 @@ img {
   color: #54CA82;
   -webkit-transform: rotate(20deg);
           transform: rotate(20deg);
-  left: 20%;
+  left: 2%;
   bottom: 340px; }
 
 .misc__bg--polygon-2 {
@@ -711,7 +847,7 @@ img {
 .misc__bg--triangle-1 {
   color: #3b9feb;
   font-size: 80px;
-  right: 15%;
+  right: 5%;
   -webkit-transform: rotate(42deg);
           transform: rotate(42deg);
   bottom: 440px; }
@@ -724,3 +860,9 @@ img {
   bottom: 120px;
   -webkit-transform: rotate(-10deg);
           transform: rotate(-10deg); }
+
+@media (min-width: 758px) {
+  .misc__bg--polygon-1 {
+    left: 20%; }
+  .misc__bg--triangle-1 {
+    right: 15%; } }
