--- a/src/sass/_pricing.scss
+++ b/src/sass/_pricing.scss
@@ -5,7 +5,7 @@ $card-y-padding: 40px;
 
 .pricing {
     background-image: linear-gradient(to bottom, $white, #f4f7fe);
-    padding-bottom: $section-triangle-height + 70px;
+    padding-bottom: $section-triangle-height-mobile + 70px;
     
     &::after {
         @include triangle-bottom;
@@ -14,7 +14,8 @@ $card-y-padding: 40px;
 
 .prices {
     display: flex;
-    margin-bottom: 150px;
+    flex-wrap: wrap;
+    margin-bottom: 50px;
     position: relative;
 
     &::before,
@@ -45,13 +46,9 @@ $card-y-padding: 40px;
 }
 
 .prices__box {
-    flex: 1;
-    min-width: 25%;
+    width: 285px;
+    margin: 0 auto 35px;
     z-index: 1;
-
-    &.prices__box--special {
-        padding-left: $gutter * 2;
-    }
 
     &:hover {
         z-index: 2;
@@ -125,7 +122,6 @@ $card-y-padding: 40px;
 
 .checkmark-list {
     &.checkmark-list--col-3 {
-        column-count: 3;
         column-gap: 50px;
     }
 }
@@ -149,5 +145,38 @@ $card-y-padding: 40px;
         width: 21px;
         left: 0;
         top: -2px;
+    }
+}
+
+@media (min-width: $screen-sm-min) and (max-width: $screen-sm-max) {
+    .checkmark-list {
+        &.checkmark-list--col-3 {
+            column-count: 2;
+        }
+    }
+}
+
+@media (min-width: $screen-sm-min) {
+    .pricing {
+        padding-bottom: $section-triangle-height + 70px;
+    }
+}
+
+@media (min-width: $screen-lg-min) {
+    .checkmark-list {
+        &.checkmark-list--col-3 {
+            column-count: 3;
+        }
+    }
+    .prices {
+        margin-bottom: 150px;
+    }
+    .prices__box {
+        flex: 1;
+        width: 25%;
+        margin: 0;
+        &.prices__box--special {
+            padding-left: $gutter * 2;
+        }
     }
 }
