--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -1,5 +1,6 @@
 $container-width: 1200px;
 $gutter: 15px; 
+$section-triangle-height-mobile: 120px;
 $section-triangle-height: 290px;
 $font: 'Nunito Sans', sans-serif;
 
@@ -17,8 +18,12 @@ $focus: #f5a12d;
 
 $shadow-color: rgba(46, 51, 65, 0.1);
 
-$header-padding-top: 60px;
 $text-opacity: 0.7;
 $animation-duration: 1s;
 $text-base-color: #232632; 
 $plain-text-color: rgba($text-base-color, 0.5);
+
+$screen-sm-min: 758px;
+$screen-lg-min: 1200px;
+$screen-xs-max: $screen-sm-min - 1px;
+$screen-sm-max: $screen-lg-min - 1px;
